--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("../node_modules/bootstrap/dist/css/bootstrap.min.css");
+@import url("../node_modules/ngx-toastr/toastr.css");
+
+.toast-container {
+    opacity: 1 !important;
+}
+
+.toast-warning {
+    opacity: 1 !important;
+}
+
+.toast{
+    opacity: 1 !important;
+}
